# Grabline

./: .gitignore  PRIVACY.md  README.md  SECURITY.md  pyproject.toml
.github/workflows/: ci.yml  packages.yml  pages.yml  release.yml
app/: __init__.py  __main__.py  cli.py
app/core/: __init__.py  alerts.py  archive.py  batch.py  browser_setup.py  categories.py  cloudlinks.py  connectivity.py  convert.py  crawler.py  credentials.py  downloader.py  dupes.py  errors.py  ffmpeg.py  ffmpeg_pins.py  gif.py  i18n.py  inspector.py  instance.py  jsruntime.py  launcher.py  listio.py  manager.py  mediainfo.py  models.py  naming.py  net.py  paths.py  power.py  probe.py  proc.py  ratelimit.py  reputation.py  resolver.py  reveal.py  rss.py  scripts.py  security.py  settings.py  (+5 more)
app/db/: __init__.py  database.py
app/engines/: __init__.py  cloud.py  hls.py  manifest.py  smart.py  torrent.py
app/i18n/: ar.json  de.json  es.json  fr.json  hi.json  it.json  ja.json  ko.json  pt.json  ru.json  tr.json  ur.json  zh.json
app/native_host/: __init__.py  __main__.py  host.py  install.py  protocol.py
app/tests/: conftest.py  media_fixtures.py  media_server.py  test_archive_manager.py  test_archive_security.py  test_batch.py  test_browser_setup.py  test_categories.py  test_cloud.py  test_crash_resume.py  test_curation.py  test_dashboard.py  test_db.py  test_downloader.py  test_dupes.py  test_extras.py  test_ffmpeg_manager.py  test_gif.py  test_guard.py  test_hls.py  test_host_install.py  test_i18n.py  test_inspector.py  test_instance.py  test_jsruntime.py  test_launcher.py  test_manager.py  test_manifest.py  test_mediainfo.py  test_naming.py  test_native_host.py  test_network.py  test_paths.py  test_probe.py  test_proc.py  test_queue_features.py  test_queues.py  test_ratelimit.py  test_resolver.py  test_reveal.py  (+10 more)
app/ui/: __init__.py  add_download_dialog.py  archive_dialog.py  batch_dialog.py  chrome.py  clipboard.py  cloud_dialog.py  components.py  dashboard.py  dashboard_view.py  design.py  detail_drawer.py  dupes_dialog.py  format.py  gallery_panel.py  gif_dialog.py  graph.py  guard.py  icon.py  icons.py  inspector_dialog.py  link_panel.py  main_window.py  motion.py  playlist_panel.py  quality_panel.py  queue_dialog.py  queue_view.py  security_dialog.py  settings_dialog.py  settings_view.py  setup_dialog.py  shortcuts.py  shortcuts_dialog.py  sparkline.py  theme.py  threads.py  tools_view.py  torrent_dialog.py  tray.py  (+1 more)
docs/: install.md  performance.md  security-model.md  store-listing.md  ui-redesign-brief.md
extension/: README.md  background.js  manifest.json
extension/content/: overlay.js
extension/content/lib/: button-kit.js  format.js  messaging.js  naming.js
extension/content/sites/: button.js  instagram.js  soundcloud.js  vimeo.js  x.js  youtube.js
extension/popup/: popup.css  popup.html  popup.js
extension/test/: button_geometry_test.js  format_test.js  harness.js  naming_test.js
packaging/: README.md  entry_gui.py  entry_host.py  grabline.iss  grabline.spec  launch.py  make_icons.py
packaging/linux/: build_appimage.sh  build_deb.sh  grabline.desktop
packaging/windows/: PORTABLE-README.txt  grabline.iss
scripts/: package_extension.py  render_extension_icons.py  update_ffmpeg_pins.py
scripts/perf/: bench.py
tools/: i18n_extract.py
website/: index.html
