[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grabline"
version = "1.5.2"
description = "Grabline: a fast, free, open-source download manager with a browser button and a full quality picker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Zain" }]
dependencies = [
    "httpx[http2]>=0.27",
    "PySide6>=6.6",
    # curl-cffi: yt-dlp's TLS-impersonation backend — Dailymotion (and a
    # growing list of sites) refuse plain-python TLS fingerprints outright.
    "yt-dlp[curl-cffi]>=2025.1.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.5",
    "mypy>=1.10",
]

[project.gui-scripts]
grabline = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["app.ui.*", "app.__main__"]
disallow_untyped_defs = false
disallow_subclassing_any = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "app.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
