[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "grabline"
version = "1.28.0"
description = "GrabLine: a fast, free, open-source download manager with a browser button and a full quality picker."
readme = "README.md"
requires-python = ">=3.12"
license = { text = "AGPL-3.0-or-later" }
authors = [{ name = "Zain" }]
dependencies = [
    "httpx[http2,socks]>=0.27",
    # SOCKS4/4a proxy transports (httpx does SOCKS5 itself, not SOCKS4).
    "httpx-socks>=0.9",
    "PySide6>=6.6",
    # curl-cffi: yt-dlp's TLS-impersonation backend: Dailymotion (and a
    # growing list of sites) refuse plain-python TLS fingerprints outright.
    "yt-dlp[curl-cffi]>=2025.1.1",
    # The torrent engine (the library behind qBittorrent): DHT, PEX,
    # UPnP/NAT-PMP, web seeds, magnet links.
    "libtorrent>=2.0.10",
    # Cloud protocol engine: SFTP/SCP (paramiko), S3 (boto3). FTP/FTPS and
    # WebDAV use the standard library / httpx. Secrets go in the OS keyring.
    "paramiko>=3.4",
    "boto3>=1.34",
    "keyring>=25.0",
    # Battery mode (pause on battery) needs a battery sensor.
    "psutil>=5.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-timeout>=2.3",
    "ruff>=0.5",
    "mypy>=1.10",
    # A local FTP server for the cloud engine's loopback test.
    "pyftpdlib>=1.5",
]

[project.gui-scripts]
grabline = "app.__main__:main"

[tool.setuptools.packages.find]
include = ["app*"]

[tool.setuptools.package-data]
"app.ui" = ["assets/*.png"]
"app" = ["i18n/*.json"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "RUF"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_unreachable = true

[[tool.mypy.overrides]]
module = ["app.ui.*", "app.__main__"]
disallow_untyped_defs = false
disallow_subclassing_any = false
check_untyped_defs = true
# __main__ is the platform entry point, full of `sys.platform` guards. mypy
# narrows sys.platform to the host it runs on (Linux in CI) and then flags the
# Windows/macOS branches as unreachable - a false positive for cross-platform
# code that is genuinely reached on those platforms.
warn_unreachable = false

[[tool.mypy.overrides]]
module = "app.tests.*"
disallow_untyped_defs = false
disallow_incomplete_defs = false
check_untyped_defs = true
# Tests assert runtime states mypy can't track (a bool flipped by a Qt signal,
# a sys.platform branch), which warn_unreachable reports as dead code. Keep the
# real type checks; drop the unreachable noise.
warn_unreachable = false

[[tool.mypy.overrides]]
module = ["yt_dlp", "yt_dlp.*", "libtorrent", "paramiko", "paramiko.*", "boto3", "keyring", "pyftpdlib.*", "psutil", "httpx_socks"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["app/tests"]
addopts = "-q"
# Per-test ceiling so a hung download / libtorrent wait fails the job instead
# of parking a CI runner for half an hour. CI also passes --timeout=90.
timeout = 120
timeout_method = "thread"
